# resync-claw

./: README.md  REVIEW-compare-zip.md  backup-status.sh  pyproject.toml  resync-claw.sh
resync_claw/: __init__.py  backup.py  cli.py  diff.py  resync.py  retention.py
tests/: __init__.py  test_backup.py  test_restore.py  test_retention.py
