[project]
name = "resync-claw"
version = "0.1.0"
description = "Disaster file safe for OpenClaw — timestamped backup to external disk"
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
resync-claw = "resync_claw.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["resync_claw*"]
